# agentforge

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED_WITH_CLAUDE_CODE.md  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3a58679fe583_add_run_awaiting_approval_flag.py  c410896a8b7b_add_ratings_unique_constraint.py  d354665d69e7_initial_schema.py
backend/app/: config.py  db.py  dependencies.py  main.py  security.py
backend/app/llm/: provider.py
backend/app/models/: __init__.py  agent.py  base.py  marketplace.py  run.py  template.py  tool.py  user.py
backend/app/repositories/: agent.py  marketplace.py  run.py  template.py  tool.py  tool_call.py  user.py
backend/app/routers/: agents.py  auth.py  health.py  marketplace.py  runs.py  templates.py  tools.py
backend/app/runtime/: __init__.py  builtins.py  checkpointer.py  compiler.py  errors.py  event_emitter.py  executor.py  expr.py  handlers.py  http_tool.py  registry.py  registry_builder.py  retry.py  state.py
backend/app/schemas/: agent.py  health.py  marketplace.py  run.py  template.py  tool.py  user.py
backend/app/scripts/: seed_templates.py
backend/app/services/: agent.py  auth.py  marketplace.py  run.py  template.py  tool.py
backend/app/workers/: __init__.py  worker.py
backend/tests/: conftest.py  test_health.py  test_llm_provider.py
backend/tests/integration/: conftest.py  test_agents_api.py  test_auth_api.py  test_checkpointer.py  test_compiler_checkpointer.py  test_event_emitter.py  test_execute_run.py  test_human_in_loop.py  test_idempotency_race.py  test_marketplace_api.py  test_recovery.py  test_replay_api.py  test_resume_api.py  test_run_repo.py  test_runs_api.py  test_sse_events.py  test_templates_api.py  test_tools_api.py
backend/tests/unit/: test_registry_builder.py  test_security.py
backend/tests/unit/runtime/: conftest.py  test_builtins.py  test_compiler.py  test_executor.py  (+8 more)
(+87 files in other folders)
